<?xml version="1.0"?>
<package>
  <name>wifi_info</name>
  <version>0.0.0</version>
  <description>Publish info about the current wifi connection</description>

  <author email="lazewatd@engr.oregonstate.edu">Dan Lazewatsky</author>
  <maintainer email="lazewatd@engr.oregonstate.edu">Dan Lazewatsky</maintainer>


  <license>BSD</license>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
  </export>
</package>